--- a/react/app/globals.css
+++ b/react/app/globals.css
@@ -3,4 +3,11 @@
 @tailwind utilities;
 
 
-  
+#spinner{
+    animation: spin 4s infinite linear;
+}
+
+@keyframes spin {
+    0%  {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}   
+}
