--- a/react/app/globals.css
+++ b/react/app/globals.css
@@ -2,12 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 14px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
 
-#spinner{
-    animation: spin 4s infinite linear;
-}
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 1px solid gray; 
+  }
 
-@keyframes spin {
-    0%  {-webkit-transform: rotate(0deg);}
-    100% {-webkit-transform: rotate(360deg);}   
-}
+  
